snapshot-tests/tests/snapshots/parser__datetimes__tz_neg3.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[wanted]: expected newline, found an identifier at tz
  ┌─ tz_neg3:1:26
  │
1 │ tz = 2016-09-09T09:09:09Z-2:00
  │                          ^^ expected newline
